syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message AbilityAttachedModifier {
	bool isInvalid = 1;
	uint32 ownerEntityId = 2;
	uint32 instancedModifierId = 3;
	bool isServerbuffModifier = 4;
	int32 attachNameHash = 5;
}
