syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "Achievement.proto";

// CmdId: 2659
// EnetChannelId: 0
// EnetIsReliable: true
message AchievementUpdateNotify {
	repeated Achievement achievement_list = 13;
}
