syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message ExpeditionChallengeInfo {
	uint32 id = 1;
	uint32 open_time = 2;
	bool is_finished = 3;
}
